--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "boo",
-  "version": "0.0.1",
-  "description": "boo is a database written in JavaScript with the following features: - memory database - tcp socket server - event-driven (all clients get notified in real time of any watched events)",
+  "name": "db.io",
+  "version": "0.0.2",
+  "description": "db.io is a database written in JavaScript with the following features: - memory database - tcp socket server - event-driven (all clients get notified in real time of any watched events)",
   "main": "index.js",
   "dependencies": {
     "colors": "~1.0.3"
   },
   "bin": {
-    "boojs": "bin/boo.js"
+    "db.io": "bin/db.io.js"
   },
   "devDependencies": {
     "mocha": "~2.0.1",
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/co2-git/boojs.git"
+    "url": "git://github.com/co2-git/db.io.git"
   },
   "keywords": [
     "javascript",
@@ -34,9 +34,6 @@
   "author": "co2-git",
   "license": "BSD-2-Clause",
   "bugs": {
-    "url": "https://github.com/co2-git/boojs/issues"
-  },
-  "bin": {
-    "boojs": "bin/boo.js"
+    "url": "https://github.com/co2-git/db.io/issues"
   }
 }
