--- a/config.json
+++ b/config.json
@@ -1,9 +1,7 @@
 {
 	"address": {
-		"server": "localhost",
-		"port": 7000,
-		"database": "boo-db",
-		"collection": "boo-sandbox",
-		"events": "boo-events"
+		"server":     "localhost",
+		"port":       7000,
+		"channel":    "test"
 	}
 }
